trunk/Archive2/2b/7b6be764821357/output
main.cpp:1:69: warning: missing terminating ' character
 To find the problems in your code, lets try debugging it!  First, we'll tell it to give us more information, listing the numbers it thinks are divisors:
                                                                     ^
main.cpp:1:1: error: missing terminating ' character
 To find the problems in your code, lets try debugging it!  First, we'll tell it to give us more information, listing the numbers it thinks are divisors:
 ^
main.cpp:14:37: warning: missing terminating ' character
 Now when we run it, it tells us what's going on:
                                     ^
main.cpp:14:1: error: missing terminating ' character
 Now when we run it, it tells us what's going on:
 ^
main.cpp:16:6: warning: missing terminating ' character
     1's divisors are:    1 
      ^
main.cpp:16:5: error: missing terminating ' character
     1's divisors are:    1 
     ^
main.cpp:17:6: warning: missing terminating ' character
     3's divisors are: 1 
      ^
main.cpp:17:5: error: missing terminating ' character
     3's divisors are: 1 
     ^
main.cpp:18:6: warning: missing terminating ' character
     6's divisors are: 1 2 3 
      ^
main.cpp:18:5: error: missing terminating ' character
     6's divisors are: 1 2 3 
     ^
main.cpp:19:7: warning: missing terminating ' character
     10's divisors are: 1 2 
       ^
main.cpp:19:5: error: missing terminating ' character
     10's divisors are: 1 2 
     ^
main.cpp:20:7: warning: missing terminating ' character
     15's divisors are: 1 3 5 
       ^
main.cpp:20:5: error: missing terminating ' character
     15's divisors are: 1 3 5 
     ^
main.cpp:21:7: warning: missing terminating ' character
     21's divisors are: 1 3 
       ^
main.cpp:21:5: error: missing terminating ' character
     21's divisors are: 1 3 
     ^
main.cpp:22:7: warning: missing terminating ' character
     28's divisors are: 1 2 4 7 
       ^
main.cpp:22:5: error: missing terminating ' character
     28's divisors are: 1 2 4 7 
     ^
main.cpp:23:7: warning: missing terminating ' character
     36's divisors are: 1 2 3 4 6 
       ^
main.cpp:23:5: error: missing terminating ' character
     36's divisors are: 1 2 3 4 6 
     ^
main.cpp:24:7: warning: missing terminating ' character
     45's divisors are: 1 3 5 9 
       ^
main.cpp:24:5: error: missing terminating ' character
     45's divisors are: 1 3 5 9 
     ^
main.cpp:25:7: warning: missing terminating ' character
     55's divisors are: 1 5 
       ^
main.cpp:25:5: error: missing terminating ' character
     55's divisors are: 1 5 
     ^
main.cpp:31:12: warning: character constant too long for its type
 Yup.  There's the bug, you only count to `i`.  When checking `21`, `i` is only `6`, so you're not finding the `7` nor the `21` divisors.  The simple fix is to iterate all the way to `num`.
            ^
main.cpp:31:1: error: stray '`' in program
 Yup.  There's the bug, you only count to `i`.  When checking `21`, `i` is only `6`, so you're not finding the `7` nor the `21` divisors.  The simple fix is to iterate all the way to `num`.
 ^
main.cpp:31:1: error: stray '`' in program
main.cpp:31:1: error: stray '`' in program
main.cpp:31:1: error: stray '`' in program
main.cpp:31:1: error: stray '`' in program
main.cpp:31:1: error: stray '`' in program
main.cpp:33:67: warning: character constant too long for its type
 An additional thing to notice is that the number of divisors doesn't climb evenly.  What if there is a number with 501 divisors, but there isn't any with 500 divisors?  In that case 
                                                                   ^
main.cpp:45:1: error: stray '`' in program
 Your code is an infinite loop.  If `div` never hits 500 _exactly_, then your code just calculates forever.  I don't think this is causing your problem, but it _is_ a bug.
 ^
main.cpp:45:1: error: stray '`' in program
main.cpp:45:114: warning: missing terminating ' character
 Your code is an infinite loop.  If `div` never hits 500 _exactly_, then your code just calculates forever.  I don't think this is causing your problem, but it _is_ a bug.
                                                                                                                  ^
main.cpp:45:1: error: missing terminating ' character
 Your code is an infinite loop.  If `div` never hits 500 _exactly_, then your code just calculates forever.  I don't think this is causing your problem, but it _is_ a bug.
 ^
main.cpp:1:1: error: 'To' does not name a type
 To find the problems in your code, lets try debugging it!  First, we'll tell it to give us more information, listing the numbers it thinks are divisors:
 ^
main.cpp:4:9: error: expected unqualified-id before 'for'
         for(j=1;j<=i;j++)
         ^
main.cpp:4:17: error: 'j' does not name a type
         for(j=1;j<=i;j++)
                 ^
main.cpp:4:22: error: 'j' does not name a type
         for(j=1;j<=i;j++)
                      ^
main.cpp:12:9: error: 'cout' does not name a type
         cout << '\n';
         ^
main.cpp:14:1: error: 'Now' does not name a type
 Now when we run it, it tells us what's going on:
 ^
main.cpp:29:13: error: 'j' does not name a type
     for(j=1;j<=i;j++)
             ^
main.cpp:29:18: error: 'j' does not name a type
     for(j=1;j<=i;j++)
                  ^
main.cpp:36:13: error: 'div' does not name a type
     for(i=1;div != 500;)
             ^
main.cpp:36:24: error: expected unqualified-id before ')' token
     for(i=1;div != 500;)
                        ^
